--- a/app/src/header/topBar/topBar.tpl.html
+++ b/app/src/header/topBar/topBar.tpl.html
@@ -1,5 +1,5 @@
-<nav class="il-topbar navbar navbar-inverse navbar-fixed-top">
-    <div class="container-fluid">
+<nav class="il-topbar navbar navbar-inverse">
+    <div class="il-topbar-container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#il-top-nav-entries" aria-expanded="false" aria-controls="navbar">
                 <span class="sr-only">Toggle navigation</span>
@@ -7,9 +7,10 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
+            <!--
             <a class="il-navbar-logo" href="#/content/0/0">
                 <object type="image/svg+xml" data="/app/static/img/HeaderIcon.svg"></object>
-            </a>
+            </a>-->
             <a class="navbar-brand" href="#/content/0/0">UI-Kitchen-Sink
             </a>
         </div>
