--- a/app/src/header/header.tpl.html
+++ b/app/src/header/header.tpl.html
@@ -1,35 +1,25 @@
 <div class="il-header">
-    <!-- TopBar ================================================== -->
-    <div class="il-header-fixed">
-        <top-bar>
-            <top-nav-categories ng-repeat="(categoryIndex,category) in categories"
-                                title="{{category.title}}"
-                                is-active="{{categorySelected.index == categoryIndex}}"
-                    >
-                <top-nav-entry ng-repeat="(entryIndex,entry) in category.subCategories"
-                               title="{{entry.title}}"
-                               index="{{entryIndex}}"
-                               category-index="{{categoryIndex}}"
-                               is-active="{{categorySelected.index == categoryIndex && subCategorySelected.index == entryIndex}}"
-                               on-dropdown-entry-selected="onDropdownEntrySelected(categoryIndex,entryIndex)">
-                </top-nav-entry>
-            </top-nav-categories>
-        </top-bar>
-    </div>
-    <!-- Dropdown Section ==================================================
-    <top-nav-content>
-        <top-nav-categories ng-repeat="(categoryIndex,category) in categories"
+    <!-- branding section ================================================== -->
+    <header-branding>
+   </header-branding>
+
+    <!-- top navigation section================================================== -->
+    <header-top-nav>
+    </header-top-nav>
+
+    <!-- main menu section================================================== -->
+    <main-menu>
+        <main-menu-categories ng-repeat="(categoryIndex,category) in categories"
                             title="{{category.title}}"
                             is-active="{{categorySelected.index == categoryIndex}}"
                 >
-            <top-nav-entry ng-repeat="(entryIndex,entry) in category.subCategories"
+            <main-menu-entry ng-repeat="(entryIndex,entry) in category.subCategories"
                            title="{{entry.title}}"
                            index="{{entryIndex}}"
                            category-index="{{categoryIndex}}"
                            is-active="{{categorySelected.index == categoryIndex && subCategorySelected.index == entryIndex}}"
                            on-dropdown-entry-selected="onDropdownEntrySelected(categoryIndex,entryIndex)">
-            </top-nav-entry>
-        </top-nav-categories>
-    </top-nav-content>-->
-    <div class="il-header-custom-branding"></div>
+            </main-menu-entry>
+        </main-menu-categories>
+    </main-menu>
 </div>
