--- a/app/src/header/headerMainMenu/mainMenu.tpl.html
+++ b/app/src/header/headerMainMenu/mainMenu.tpl.html
@@ -1,5 +1,5 @@
-<nav class="il-top-nav navbar navbar-default navbar-fixed-top">
-    <div class="container-fluid">
+<div class="il-header-main-menu">
+    <div class="il-header-main-menu-content navbar navbar-inverse navbar-default ">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="">
@@ -10,16 +10,10 @@
             </button>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
-        <div id="il-top-nav-entries" class="collapse navbar-collapse">
+        <div class="il-header-main-menu-entries collapse navbar-collapse">
             <ul class="nav navbar-nav" ng-transclude>
 
             </ul>
-            <form class="navbar-form navbar-right">
-                <a type="submit" ng-click="onViewChange('full')" class="btn btn-default">Full</a>
-                <a type="submit" ng-click="onViewChange('left')" class="btn btn-default">Left</a>
-                <a type="submit" ng-click="onViewChange('right')" class="btn btn-default">Right</a>
-                <a type="submit" ng-click="onViewChange('three')" class="btn btn-default">Three</a>
-            </form>
         </div><!-- /.navbar-collapse -->
     </div>
-</nav>
+</div>
