New header implementation

--- a/app/src/header/headerBranding/headerBranding.tpl.html
+++ b/app/src/header/headerBranding/headerBranding.tpl.html
@@ -1,3 +1,3 @@
 <div class="il-header-branding">
-    <h1>UI-Kitchen-Sink</h1>
+    <span class="glyphicon glyphicon-cutlery il-logo" aria-hidden="true"></span><span class="il-header-branding-text">UI-Kitchen-Sink</span>
 </div>
