File Upload added Part 1

--- a/app/data/collections/forms/fileUpload/fileUpload.html
+++ b/app/data/collections/forms/fileUpload/fileUpload.html
@@ -1,60 +1,4 @@
-<!-- The /index.html file is created automatically by grunt. Do not change this, change /app/index.html instead -->
-
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <base href="/">
-
-    <title>UI-Kitchen-Sink</title>
-    <link rel="stylesheet" href="libs/select2/select2.css" />
-    <link rel="stylesheet" href="libs/select2-bootstrap-css/select2-bootstrap.css" />
-    <link rel="stylesheet" href="libs/blueimp-file-upload/css/jquery.fileupload.css" />
-    <link rel="stylesheet" href="libs/blueimp-file-upload/css/jquery.fileupload-ui.css" />
-    <link rel="stylesheet" href="libs/blueimp-file-upload/css/jquery.fileupload-noscript.css" />
-    <link rel="stylesheet" href="libs/blueimp-file-upload/css/jquery.fileupload-ui-noscript.css" />
-
-    <!-- endbower -->
-    <link href="/app/static/css/app.css" rel="stylesheet" type="text/css">
-
-    <script src="libs/jquery/dist/jquery.js"></script>
-    <script src="libs/bootstrap/dist/js/bootstrap.js"></script>
-    <script src="libs/select2/select2.js"></script>
-    <script src="libs/jstree/dist/jstree.js"></script>
-    <script src="libs/jquery-ui/jquery-ui.js"></script>
-    <script src="libs/blueimp-tmpl/js/tmpl.js"></script>
-    <script src="libs/blueimp-load-image/js/load-image.js"></script>
-    <script src="libs/blueimp-load-image/js/load-image-ios.js"></script>
-    <script src="libs/blueimp-load-image/js/load-image-orientation.js"></script>
-    <script src="libs/blueimp-load-image/js/load-image-meta.js"></script>
-    <script src="libs/blueimp-load-image/js/load-image-exif.js"></script>
-    <script src="libs/blueimp-load-image/js/load-image-exif-map.js"></script>
-    <script src="libs/blueimp-canvas-to-blob/js/canvas-to-blob.js"></script>
-    <script src="libs/blueimp-file-upload/js/cors/jquery.postmessage-transport.js"></script>
-    <script src="libs/blueimp-file-upload/js/cors/jquery.xdr-transport.js"></script>
-    <script src="libs/blueimp-file-upload/js/vendor/jquery.ui.widget.js"></script>
-    <script src="libs/blueimp-file-upload/js/jquery.fileupload.js"></script>
-    <script src="libs/blueimp-file-upload/js/jquery.fileupload-process.js"></script>
-    <script src="libs/blueimp-file-upload/js/jquery.fileupload-validate.js"></script>
-    <script src="libs/blueimp-file-upload/js/jquery.fileupload-image.js"></script>
-    <script src="libs/blueimp-file-upload/js/jquery.fileupload-audio.js"></script>
-    <script src="libs/blueimp-file-upload/js/jquery.fileupload-video.js"></script>
-    <script src="libs/blueimp-file-upload/js/jquery.fileupload-ui.js"></script>
-    <script src="libs/blueimp-file-upload/js/jquery.fileupload-jquery-ui.js"></script>
-    <script src="libs/blueimp-file-upload/js/jquery.iframe-transport.js"></script>
-    <script src="/app/src/iliasjs/Basic.js"></script>
-    <script src="/app/src/iliasjs/form/jquery.ba-dotimeout.min.js"></script>
-    <script src="/app/src/iliasjs/ilFileUpload.js"></script>
-    <script src="/app/src/iliasjs/form/Form.js"></script>
-    <script src="/app/src/iliasjs/form/ServiceFormHierarchyForm.js"></script>
-    <script src="/app/src/iliasjs/form/ServiceFormMulti.js"></script>
-    <script src="/app/src/iliasjs/form/ServiceFormWizardInput.js"></script>
-    <script src="/app/src/iliasjs/form/date_duration.js"></script>
-    <script src="/app/src/iliasjs/form/ilFileUpload.js"></script>
-</head>
-<body>
-
-<form id="form_" role="form" class="form-horizontal preventDoubleSubmission" enctype="multipart/form-data" action="#/content/0/0/0/0" method="post">
+<form id="form_" role="form" class="form-horizontal preventDoubleSubmission" enctype="multipart/form-data" method="post">
 
     <div class="form-horizontal">
         <!-- todo: HIDE_LABELS_STYLE -->
@@ -217,7 +161,3 @@
     });
 
 </script>
-
-
-</body>
-</html>
