--- a/app/src/content/center/tab/tabsContent.tpl.html
+++ b/app/src/content/center/tab/tabsContent.tpl.html
@@ -1,3 +1,3 @@
-<ul id="Tablist" class="il-content-tabs nav nav-tabs" role="tablist" ng-transclude>
+<ul id="Tablist" class="il-content-{{type}} nav nav-tabs" role="tablist" ng-transclude>
 </ul>
 
