Added file preview, code highlighiting, improved urls

--- a/app/data/collections/forms/fileUpload/fileUpload.html
+++ b/app/data/collections/forms/fileUpload/fileUpload.html
@@ -1,4 +1,4 @@
-<form id="form_" role="form" class="form-horizontal preventDoubleSubmission" enctype="multipart/form-data" method="post">
+<form id="form_" role="form" class="form-horizontal preventDoubleSubmission" enctype="multipart/form-data" method="post" action="#/content/2/0/1/0">
 
     <div class="form-horizontal">
         <!-- todo: HIDE_LABELS_STYLE -->
@@ -20,7 +20,7 @@
                     </div>
                     <div class="ilFileUploadDropAlternative">
                         <a id="ilFileUploadFileSelect_1" class="submit omitPreventDoubleSubmission">
-                            <span><img src="./templates/default/images/icon_fold.svg"> Select the files from your computer</span>
+                            <span><img src="/app/static/img/services/forms/icon_fold.svg"> Select the files from your computer</span>
                             <input id="ilFileUploadInput_1" type="file" name="upload_files" accept="" multiple="">sldfkj</a>
                         </a>
                     </div>
@@ -39,23 +39,7 @@
                 </div>
 
                 <script type="text/javascript">
-                    il.FileUpload.texts.fileTooLarge = "The uploaded file exceeds the max. allowed file size.";
-                    il.FileUpload.texts.invalidFileType = "Wrong file type.";
-                    il.FileUpload.texts.fileZeroBytes = "The file size is 0 bytes or it is a folder.";
-                    il.FileUpload.texts.uploadWasZeroBytes = "The upload failed as this is a folder, the file size is 0 bytes or the file was renamed meanwhile.";
-                    il.FileUpload.texts.cancelAllQuestion = "Do you really want to cancel all pending uploads?";
-                    il.FileUpload.texts.extractionFailed = "The extraction of the archive and its directories failed. Probably because you don’t have the rights to create folders or categories within this object.";
-                    il.FileUpload.texts.uploading = "Uploading...";
-                    il.FileUpload.texts.extracting = "Extracting...";
-                    il.FileUpload.texts.dropFilesHere = "Drop the files here to upload them into this object.";
-                </script>
 
-
-                <script type="text/javascript">
-                    il.FileUpload.defaults.concurrentUploads = 3;
-                    il.FileUpload.defaults.maxFileSize = 419430400;
-                    il.FileUpload.defaults.allowedExtensions = [  ];
-                    il.FileUpload.defaults.supportedArchives = [ "zip" ];
                 </script>
 
                 <script type="text/x-tmpl" id="fileupload_row_tmpl">
