--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
 </head>
 <body ng-app="uiKitchenSink" ng-controller="MainController">
     <header ng-controller="HeaderController"></header>
-    <div class="il-content content" ng-controller="ContentController" ng-view
+    <div class="il-content content" ng-view
             view-mode="{{viewMode}}">
     </div>
     <footer></footer>
