--- a/app/src/content/center/breadcrumb/breadcrumbContent.tpl.html
+++ b/app/src/content/center/breadcrumb/breadcrumbContent.tpl.html
@@ -1,5 +1,5 @@
 <ol class="breadcrumb">
-    <li><a href="#/content/{{categoryIndex}}">{{categorySelected}}</a></li>
-    <li><a href="#/content/{{categoryIndex}}/{{subCategoryIndex}}">{{entrySelected}}</a></li>
-    <li><a href="#/content/{{categoryIndex}}/{{subCategoryIndex}}/{{tabIndex}}">{{tabSelected}}</a></li>
+    <li><a href="#/content/{{categoryId}}">{{categorySelected}}</a></li>
+    <li><a href="#/content/{{categoryId}}/{{subCategoryId}}">{{entrySelected}}</a></li>
+    <li><a href="#/content/{{categoryId}}/{{subCategoryId}}/{{tabId}}">{{tabSelected}}</a></li>
 </ol>
