--- a/app/src/content/center/tab/tabsCategories.tpl.html
+++ b/app/src/content/center/tab/tabsCategories.tpl.html
@@ -1,3 +1,3 @@
 <li role="presentation" ng-class="active">
-    <a href="#/content/{{categoryIndex}}/{{subCategoryIndex}}/{{tabIndex}}/{{subTabIndex}}" role="tab" data-target="{{index+1}}" data-toggle="tab">{{title}}</a>
+    <a href="#/content/{{categoryId}}/{{subCategoryId}}/{{tabId}}/{{subTabId}}" role="tab" data-target="{{index+1}}" data-toggle="tab">{{title}}</a>
 </li>
