--- a/app/src/header/headerMainMenu/mainMenuEntry.tpl.html
+++ b/app/src/header/headerMainMenu/mainMenuEntry.tpl.html
@@ -1,3 +1,3 @@
 <li class="{{active}}">
-    <a  href='#/content/{{categoryIndex}}/{{index}}' data-target="" aria-controls='{{index}}' role='tab'  ng-click='onDropdownEntrySelected();'>{{title}}</a>
+    <a  href='#/content/{{categoryId}}/{{subCategoryId}}' data-target="" aria-controls='{{index}}' role='tab'  ng-click='onDropdownEntrySelected();'>{{title}}</a>
 </li>
