--- a/test.html
+++ b/test.html
@@ -54,7 +54,7 @@
 </head>
 <body>
 
-<form id="form_" role="form" class="form-horizontal preventDoubleSubmission" enctype="multipart/form-data" action="#/content/0/0/0/0" method="post">
+<form id="form_" role="form" class="form-horizontal preventDoubleSubmission" enctype="multipart/form-data" method="post">
 
     <div class="form-horizontal">
         <!-- todo: HIDE_LABELS_STYLE -->
@@ -76,7 +76,7 @@
                     </div>
                     <div class="ilFileUploadDropAlternative">
                         <a id="ilFileUploadFileSelect_1" class="submit omitPreventDoubleSubmission">
-                            <span><img src="./templates/default/images/icon_fold.svg"> Select the files from your computer</span>
+                            <span><img src="/app/static/img/services/forms/icon_fold.svg"> Select the files from your computer</span>
                             <input id="ilFileUploadInput_1" type="file" name="upload_files" accept="" multiple="">sldfkj</a>
                         </a>
                     </div>
