Added DateTimePicker, TableFilter, Toolbar additions

--- a/app/data/collections/forms/fileUpload/fileUpload.html
+++ b/app/data/collections/forms/fileUpload/fileUpload.html
@@ -21,7 +21,7 @@
                     <div class="ilFileUploadDropAlternative">
                         <a id="ilFileUploadFileSelect_1" class="submit omitPreventDoubleSubmission">
                             <span><img src="/app/static/img/services/forms/icon_fold.svg"> Select the files from your computer</span>
-                            <input id="ilFileUploadInput_1" type="file" name="upload_files" accept="" multiple="">sldfkj</a>
+                            <input id="ilFileUploadInput_1" type="file" name="upload_files" accept="" multiple=""></a>
                         </a>
                     </div>
                     <div id="ilFileUploadList_1" class="ilFileUploadList" style="display: none;">
