Action menu removed

--- a/app/src/header/headerTopNav/headerTopNav.tpl.html
+++ b/app/src/header/headerTopNav/headerTopNav.tpl.html
@@ -1,18 +1,7 @@
 <ul class="il-header-top-nav">
-    <li><a><span class="glyphicon glyphicon-envelope"></span></a></li>
-    <li class="dropdown">
-    <li><a><span class="glyphicon glyphicon-user"></span></a></li>
-    <ul class="dropdown-menu pull-right" role="menu">
-        <li>
-            <a>Persönliche Daten und Profil</a>
-        </li>
-        <li>
-            <a>Einstellungen</a>
-        </li>
-        <li role="presentation" class="divider"></li>
-        <li>
-            <a>Abmelden</a>
-        </li>
-    </ul>
+    <li>
+        <a href="/libs/live-less-theme-customizer/dist/customizer.html">
+            <span class="glyphicon glyphicon-wrench"></span>
+        </a>
     </li>
 </ul>
