roles added for header and main menu

--- a/app/src/header/header.tpl.html
+++ b/app/src/header/header.tpl.html
@@ -1,4 +1,4 @@
-<div class="il-header">
+<div class="il-header" role="banner">
     <!-- branding section ================================================== -->
     <header-branding>
    </header-branding>
