--- a/app/src/header/headerMainMenu/mainMenu.tpl.html
+++ b/app/src/header/headerMainMenu/mainMenu.tpl.html
@@ -1,5 +1,5 @@
 <div class="il-header-main-menu">
-    <div class="il-header-main-menu-content navbar navbar-inverse navbar-default ">
+    <div class="il-header-main-menu-content navbar navbar-inverse navbar-default" role="navigation">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".il-header-main-menu-entries">
